2004-08-04  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/new_book_dialog.glade,
	  lib/alexandria/ui/new_book_dialog.rb:

	- Do not try to add the book if the add button is disabled ;
	- Grab the focus on the ISBN entry at the beginning (#760) ;
	- Autoselect the criterion when the user clicks on an insensitive
	  widget (#761).

2004-07-31  Dafydd Harries  <daf@muse.19inch.net>

	* lib/alexandria/book_providers.rb:

	Replace "TooMuchResultsError" with "TooManyResultsError".

2004-07-24  Dafydd Harries  <daf@muse.19inch.net>

	* lib/alexandria/library.rb:

	Fix bug #752, where the ISBN checksum didn't get converted to an X
	when it was a 10.

2004-07-21  Laurent Sansonetti  <lrz@gnome.org>

	* TODO:

	Updated.

	* lib/alexandria/book_providers/amazon.rb:

	Squeezes extra spaces.

	* lib/alexandria/ui/new_book_dialog.rb:

	Appends the edition and the publisher in the search results list
	for books that have the same title and authors.

2004-07-11  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/new_book_dialog.glade:

	Modified the ISBN text entry to allow 18 characters instead
	of 13.  

	* bin/pre-setup.rb:

	Added.  This generates bin/alexandria with a dummy #! line that
	will be replaced with the correct Ruby path by install.rb.

	* bin/alexandria:
	
	Removed.

	* bin/.cvsignore:

	Added.  Ignores bin/alexandria since it's now a generated file.

=== Alexandria 0.3.1 ===

2004-07-10  Laurent Sansonetti  <lrz@gnome.org>

	* NEWS:

	Updated for 0.3.1.

2004-07-10  Dafydd Harries  <daf@muse.19inch.net>

	* lib/alexandria/library.rb,
	  lib/alexandria/ui/new_book_dialog.rb:

	- Proper support for EAN numbers. Also, ISBN numbers are tidied more
	  consistently.

	* lib/alexandria/ui/main_app.rb:

	- Remove custom sorting functions as they appear not to make anything
	  work better and may actually cause some problems, such as bug #698.

2004-07-09  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/book_providers.rb,